dc/sttservice-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stt-service
  namespace: aimodel
  labels:
    app: stt-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stt-service
  template:
    metadata:
      labels:
        app: stt-service
    spec:
      containers:
      - name: stt-service
        image: mcdodik2008/stt-service
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
