dc/sttservice-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: stt-service
  namespace: aimodel
spec:
  selector:
    app: stt-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
