dc/sttservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stt-service-virtualservice
  namespace: aimodel
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /speech-to-text
    - uri:
        exact: /
    route:
    - destination:
        host: stt-service
        port:
          number: 80
